[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Silver.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 480
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 85
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 85
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 85
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.623529, 0.521569, 0.329412, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -608.0
margin_right = 608.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 1 )
text = "MonkeBox"

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 504.0
margin_top = 366.0
margin_right = 748.0
margin_bottom = 677.0

[node name="Play" type="Button" parent="Buttons"]
margin_right = 244.0
margin_bottom = 101.0
focus_neighbour_top = NodePath("../Quit")
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Credits" type="Button" parent="Buttons"]
margin_top = 105.0
margin_right = 244.0
margin_bottom = 206.0
focus_neighbour_bottom = NodePath("../Quit")
custom_fonts/font = SubResource( 3 )
text = "Credits"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 210.0
margin_right = 244.0
margin_bottom = 311.0
focus_neighbour_bottom = NodePath("../Play")
custom_fonts/font = SubResource( 4 )
text = "Quit Game"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
